[package]
name = "integration"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
anyhow = "1"
log = "0.4"

async-trait = { version = "0.1" }
tokio = { version = "1.19", features = ["full"] }

sp-core = "26.0"
sp-runtime = "29.0"
sp-keyring = "29.0"
sp-weights = "25.0"

polymesh-api = { version = "3.7.0", features = ["download_metadata"] }
polymesh-api-tester = { version = "0.4.4", features = ["download_metadata"] }
