[package]
name = "integration"
version = "0.1.0"
edition = "2021"

# Use these for testing new versions of `polymesh-api`.
#[patch.crates-io]
#polymesh-api = { git = "https://github.com/PolymeshAssociation/polymesh-api" }
#polymesh-api-client = { git = "https://github.com/PolymeshAssociation/polymesh-api" }
#polymesh-api-client-extras = { git = "https://github.com/PolymeshAssociation/polymesh-api" }
#polymesh-api-tester = { git = "https://github.com/PolymeshAssociation/polymesh-api" }
#polymesh-api-codegen = { git = "https://github.com/PolymeshAssociation/polymesh-api" }
#polymesh-api-codegen-macro = { git = "https://github.com/PolymeshAssociation/polymesh-api" }

[features]
default = []

[dependencies]
anyhow = "1"
log = "0.4"

async-trait = { version = "0.1" }
tokio = { version = "1.19", features = ["full"] }

sp-core = "26.0"
sp-runtime = "29.0"
sp-keyring = "29.0"
sp-weights = "25.0"

polymesh-api = { version = "3.8.0", features = ["download_metadata"] }
polymesh-api-tester = { version = "0.7.0", default-features = false, features = ["download_metadata", "polymesh_v7"] }
