[package]
name = "migration-tests"
version = "0.1.0"
authors = ["Polymath"]
edition = "2018"

[dependencies]
remote-externalities = { path = "remote-externalities" }
frame-support = { git = "https://github.com/paritytech/substrate", tag = "v2.0.1" }
futures = "0.3"

# Old pallets
polymesh-runtime-old = { package = "polymesh-runtime-testnet", git = "https://github.com/PolymathNetwork/Polymesh", rev = "14951c75b778d5ee75c8ecdc02b70b6eb6d7b172" }
pallet-staking-old = { package = "pallet-staking", git = "https://github.com/PolymathNetwork/Polymesh", rev = "14951c75b778d5ee75c8ecdc02b70b6eb6d7b172" }

# New pallets
polymesh-runtime = { package = "polymesh-runtime-testnet", path = "../pallets/runtime/testnet" }
pallet-staking = { path = "../pallets/staking" }
