[package]
name = "migration-tests"
version = "0.1.0"
authors = ["Polymath"]
edition = "2018"

[dependencies]
futures = "0.3"
lazy_static = "1.4.0"

# Old migration helpers
remote-externalities-old = { package = "remote-externalities", git = "https://github.com/PolymathNetwork/Polymesh", rev = "065ea0c243c7e6f6d665d769cf79647d2ecfca00" }
frame-support-old = { package = "frame-support", git = "https://github.com/paritytech/substrate", tag = "v2.0.1" }
sp-state-machine-old = { package = "sp-state-machine", git = "https://github.com/paritytech/substrate", tag = "v2.0.1" }

# New migration helpers
remote-externalities = { path = "remote-externalities" }
frame-support = { git = "https://github.com/PolymathNetwork/substrate", tag = "v2.0.1-1" }
sp-core = { git = "https://github.com/PolymathNetwork/substrate", tag = "v2.0.1-1" }

# Old pallets
polymesh-runtime-old = { package = "polymesh-runtime-testnet", git = "https://github.com/PolymathNetwork/Polymesh", rev = "14951c75b778d5ee75c8ecdc02b70b6eb6d7b172" }
pallet-asset-old = { package = "pallet-asset", git = "https://github.com/PolymathNetwork/Polymesh", rev = "14951c75b778d5ee75c8ecdc02b70b6eb6d7b172" }
polymesh-primitives-old = { package = "polymesh-primitives", git = "https://github.com/PolymathNetwork/Polymesh", rev = "14951c75b778d5ee75c8ecdc02b70b6eb6d7b172" }

# New pallets
polymesh-runtime = { package = "polymesh-runtime-testnet", path = "../core/runtime/testnet", features = ["migration-dry-run"] }
pallet-asset = { path = "../core/pallets/asset" }
polymesh-primitives = { path = "../core/primitives" }
