[package]
name = "polymesh-node-rpc"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/PolymathNetwork/substrate"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
polymesh-primitives = { path = "../primitives", default-features = false }
pallet-contracts-rpc = { version = "0.8.1" }
pallet-group-rpc = { path = "../pallets/group/rpc" }
pallet-staking-rpc = { path = "../pallets/staking/rpc" }
pallet-protocol-fee-rpc = {  path = "../pallets/protocol-fee/rpc" }
node-rpc = { path = "../rpc" }

jsonrpc-core = "15.0.0"

codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-blockchain = { version = "2.0.1" }
sp-runtime = { version = "2.0.1" }
sp-api = { version = "2.0.1" }
sc-client-api = { version = "2.0.1" }
sp-consensus = { version = "0.8.1" }
sp-consensus-babe = { version = "0.8.1" }
sp-block-builder = { version = "2.0.1" }
txpool-api = { package = "sp-transaction-pool", version = "2.0.1" }

sc-rpc = { version = "2.0.1" }
sc-consensus-babe = { version = "0.8.1" }
sc-consensus-babe-rpc = { version = "0.8.1" }
sc-consensus-epochs = { version = "0.8.1" }
sc-finality-grandpa = { version = "0.8.1" }
sc-finality-grandpa-rpc = { version = "0.8.1" }
sc-keystore = { version = "2.0.1" }

frame-rpc-system = { package = "substrate-frame-rpc-system", version = "2.0.1"  }
